crates/tui/snapshots/fullscreen/frame/model_subscription_list.snap
---
source: crates/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 18)"
---
  .                                                                                       [仪 表 盘 ]  
                                                                                                    
            ┌── 模 型  ─────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ 搜 索 模 型                                                            │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  已 固 定  ─────────────────────────────────────────────────────────────── │             
            │> Grok Ash                                                               │             
            │                                                                         │             
            │  其 他 模 型  ───────────────────────────────────────────────────────────── │             
            │  GPT-6-Astra                                                            │             
            │  GPT-5.6-Sol                                                            │             
  ──────────│                                                                         │───────────  
  > 构 建 任 何 └─────────────────────────────────────────────────────────────────────────┘             
  ────────────────────────────────────────────────────────────────────────────────────── 自 动 模 型    
                                                                                                    
  ↑↓ 选 择  · / 搜 索  · p 取 消 固 定  · Enter 应 用  · Esc 取 消
