crates/tui/snapshots/fullscreen/frame/policy_top_tip_expired.snap
---
source: crates/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 120, 20)"
---
  .                                                                                                        [Dashboard]  
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────  
  >                                                                                                                     
  ─────────────────────────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                                        
  ⏸ Manual · ← Dashboard · ? for shortcuts
