crates/tui/snapshots/fullscreen/frame/policy_top_tip_running_permission.snap
---
source: crates/tui/src/app/fullscreen/frame_tests.rs
expression: visible
---
  .                                                                                                        [Dashboard]  
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                     /permission to change permissions  
  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────  
  >                                                                                                                     
  ─────────────────────────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                                        
  ⏸ Manual · ← Dashboard · ? for shortcuts
