crates/tui/snapshots/fullscreen/frame/pull_request_agent_task.snap
---
source: crates/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 20)"
---
  .                                                                                    [Dashboard]  
                                                                                                    
> /pr                                                                                               
                                                                                                    
> Prepare and create a pull request for the current changes using the connected GitHub tools. Verify
the target branch and checks, and report the pull request link.                                     
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
⠋ Starting... · 0s                                                                                  
                                                                 /permission to change permissions  
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  >                                                                                                 
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  ⏸ Manual · ← Dashboard · ? for shortcuts
