crates/tui/snapshots/fullscreen/frame/running_tip_after_language_change.snap
---
source: crates/tui/src/app/fullscreen/frame_tests.rs
expression: localized
---
  .                                                                   [仪表盘]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
⠋ 正在处理... · 9s · esc 可中断                                                 
 └─ 技巧：复杂任务可以请 Ash 先列出步骤                                         
                                                                                
  ────────────────────────────────────────────────────────────────────────────  
  >                                                                             
  ────────────────────────────────────────────────────────────────── 自动模型   
                                                                                
  ⏸ 手动 · ← 仪表盘 · ? 查看快捷键
