crates/tui/snapshots/fullscreen/frame/short_provider_modal_api_key.snap
---
source: crates/tui/src/app/fullscreen/frame_tests.rs
expression: next
---
  .                                                                                    [Dashboard]  
                                                                                                    
            ┌── Config › Custom provider ─────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  Base URL                                                               │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ https://example.com/v1                                             │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │> API key                                                                │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ API key (optional)                                                 │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
  ──────────│                                                                         │───────────  
  > Build an└─────────────────────────────────────────────────────────────────────────┘             
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  Enter to edit  ·  Tab/Shift+Tab to move  ·  Esc to return
