crates/tui/snapshots/fullscreen/frame/short_provider_panel.snap
---
source: crates/tui/src/app/fullscreen/frame_tests.rs
expression: output
---
  .                                                                                    [Dashboard]  
                                                                                                    
            ┌── Config › Custom provider ─────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  Provider name                                                          │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Provider name                                                      │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │> Base URL                                                               │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ https://example.com/v1                                             │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
  ──────────│                                                                         │───────────  
  > Build an└─────────────────────────────────────────────────────────────────────────┘             
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  Enter to edit  ·  Tab/Shift+Tab to move  ·  Esc to return
