crates/tui/snapshots/fullscreen/frame/slash_popup_scrolled_to_last_command.snap
---
source: crates/tui/src/app/fullscreen/frame_tests.rs
expression: rendered
---
  .                                                                [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ───────────────────────────────────────────────────────────────────── 38/38   
  /pr                        ask the Agent to create or inspect a pull request │
  /marketplace               find and install Marketplace packages             │
  /plugins                   manage installed packages and exact versions      │
  /lsp                       manage language servers and find packages         │
  /voice                     dictate into the current draft; run again to stop │
  /debug-context             Developer: inspect context tool estimates and     │
                             full definitions                                  ┃
  ────────────────────────────────────────────────────────────────────────────  
  > /                                                                           
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  ⏸ Manual
